@@ -906,6 +906,11 @@ May 14, 2010- Remove memswap usage in CIntegrateCommand.cpp.
 pre7:
 May 18, 2010 - Fix error in GUI spectrum usage calculation. Was under
               calcluating summary spectrum usage.
+June 2, 2010
              - Fix treegui problems:
                * Gate dependencies not calculated right if only one gate.
                * mclistbox now clean for tcl 8.5
+June 3, 2010
+             - WO 2529-005-CP-005 - Add an extra layer of indirection
+               (parameter scoreboarding) to improve the performance
+               of histogramming when spectra and parameters are sparse.
